# Utils

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: cpp.yml
reflect/include/rfl/: SnakeCaseToCamelCase.hpp
reflect/src/: yyjson.c
src/: Assert.hpp  NonCopyable.hpp  Timing.cpp  Timing.hpp  Types.hpp
src/Log/: Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Timer.hpp  Timing.cpp  Timing.hpp
src/MyMath/: MyMatrix.hpp  MyVectors.hpp
